# mkdocs-nav-weight

./: .gitignore  LICENSE  README.md  README_CN.md  publish.ps1  pyproject.toml  requirements.txt  setup.py
mkdocs_nav_weight/: __init__.py  nav_setter.py  util.py
test-project/: mkdocs.yml  mkdocs_serve.ps1
test-project/docs/: entry.md  headless.md
test-project/docs/empty/: index.md  intro.md
test-project/docs/headless/: 0_test.md  1_test.md  2_test.md  index.md
test-project/docs/weight/: 0_test.md  1_test.md  2_test.md  3_test.md  4_test.md  index.md
test-project/docs/weight_copy/: index.md
